--- a/dev/simple_example-module-ver.ipynb
+++ b/dev/simple_example-module-ver.ipynb
@@ -452,11 +452,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def arb_rad_length(z:float, lw:Tensor, size:float) -> float:\n",
+    "def arb_rad_length(*,z:float, lw:Tensor, size:float) -> float:\n",
     "    rad_length = torch.ones(list((lw/size).long()))*X0['aluminium']\n",
     "    if z >= 0.3 and z <= 0.6: rad_length[3:7,3:7] = X0['lead']\n",
     "#     if z == 0.6 : rad_length[...] = X0['lead']\n",
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -494,18 +494,18 @@
        "         0.0890]])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "d = arb_rad_length(0.6, lw=Tensor([1,1]), size=0.1);d"
+    "d = arb_rad_length(z=0.6, lw=Tensor([1,1]), size=0.1);d"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,17 +523,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([0.0890, 0.0890, 0.0890, 0.0890, 0.0890, 0.0890, 0.0890, 0.0890, 0.0890,\n",
-       "        0.0890])"
+       "tensor([0.0056, 0.0890, 0.0890, 0.0890, 0.0890, 0.0890, 0.0890, 0.0890, 0.0890,\n",
+       "        0.0056])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2061,6 +2061,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([])"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.empty(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 76,
    "metadata": {},
    "outputs": [
@@ -2097,7 +2117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2106,16 +2126,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(1.8534, grad_fn=<AddBackward0>)"
+       "tensor(4.8544, grad_fn=<AddBackward0>)"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2126,16 +2146,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(1000348.1875, grad_fn=<AddBackward0>)"
+       "tensor(4001392.7500, grad_fn=<AddBackward0>)"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
