--- a/dev/simple_example.ipynb
+++ b/dev/simple_example.ipynb
@@ -1598,7 +1598,7 @@
     "        vols = reversed(self.get_passives())\n",
     "        return torch.stack([v.rad_length for v in vols], dim=0)\n",
     "    \n",
-    "    def lookup_coords(self, xyz:Tensor, passive_only:bool) -> Tensor:\n",
+    "    def lookup_xyz_coords(self, xyz:Tensor, passive_only:bool) -> Tensor:\n",
     "        r'''Assume same size for all layers for now and no intermedeate detector layers'''\n",
     "        if len(xyz.shape) == 1: xyz = xyz[None,:]\n",
     "        sz = self.layers[0].size\n",
@@ -2401,7 +2401,7 @@
     "    \n",
     "    def average_preds(self, x0_dtheta:Optional[Tensor], x0_dtheta_unc:Optional[Tensor], x0_dxy:Optional[Tensor], x0_dxy_unc:Optional[Tensor], efficiency:Tensor) -> Tensor:\n",
     "        loc,loc_unc = self.scatters.location[self.mask],self.scatters.location_unc[self.mask]\n",
-    "        loc_idx = self.volume.lookup_coords(loc, passive_only=True)\n",
+    "        loc_idx = self.volume.lookup_xyz_coords(loc, passive_only=True)\n",
     "        idxs = torch.arange(len(loc)).long(),loc_idx[:,2],loc_idx[:,0],loc_idx[:,1]\n",
     "        \n",
     "        pred,weight = [],[]\n",
