--- a/dev/training_wrapper.ipynb
+++ b/dev/training_wrapper.ipynb
@@ -175,6 +175,153 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OrderedDict([('layers.0.resolution',\n",
+       "              tensor([[1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000.],\n",
+       "                      [1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000.],\n",
+       "                      [1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000.],\n",
+       "                      [1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000.],\n",
+       "                      [1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000.],\n",
+       "                      [1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000.],\n",
+       "                      [1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000.],\n",
+       "                      [1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000.],\n",
+       "                      [1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000.],\n",
+       "                      [1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000.]])),\n",
+       "             ('layers.0.efficiency',\n",
+       "              tensor([[0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000,\n",
+       "                       0.5000],\n",
+       "                      [0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000,\n",
+       "                       0.5000],\n",
+       "                      [0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000,\n",
+       "                       0.5000],\n",
+       "                      [0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000,\n",
+       "                       0.5000],\n",
+       "                      [0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000,\n",
+       "                       0.5000],\n",
+       "                      [0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000,\n",
+       "                       0.5000],\n",
+       "                      [0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000,\n",
+       "                       0.5000],\n",
+       "                      [0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000,\n",
+       "                       0.5000],\n",
+       "                      [0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000,\n",
+       "                       0.5000],\n",
+       "                      [0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000,\n",
+       "                       0.5000]])),\n",
+       "             ('layers.1.resolution',\n",
+       "              tensor([[1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000.],\n",
+       "                      [1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000.],\n",
+       "                      [1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000.],\n",
+       "                      [1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000.],\n",
+       "                      [1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000.],\n",
+       "                      [1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000.],\n",
+       "                      [1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000.],\n",
+       "                      [1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000.],\n",
+       "                      [1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000.],\n",
+       "                      [1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000.]])),\n",
+       "             ('layers.1.efficiency',\n",
+       "              tensor([[0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000,\n",
+       "                       0.5000],\n",
+       "                      [0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000,\n",
+       "                       0.5000],\n",
+       "                      [0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000,\n",
+       "                       0.5000],\n",
+       "                      [0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000,\n",
+       "                       0.5000],\n",
+       "                      [0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000,\n",
+       "                       0.5000],\n",
+       "                      [0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000,\n",
+       "                       0.5000],\n",
+       "                      [0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000,\n",
+       "                       0.5000],\n",
+       "                      [0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000,\n",
+       "                       0.5000],\n",
+       "                      [0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000,\n",
+       "                       0.5000],\n",
+       "                      [0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000,\n",
+       "                       0.5000]])),\n",
+       "             ('layers.8.resolution',\n",
+       "              tensor([[1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000.],\n",
+       "                      [1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000.],\n",
+       "                      [1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000.],\n",
+       "                      [1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000.],\n",
+       "                      [1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000.],\n",
+       "                      [1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000.],\n",
+       "                      [1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000.],\n",
+       "                      [1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000.],\n",
+       "                      [1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000.],\n",
+       "                      [1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000.]])),\n",
+       "             ('layers.8.efficiency',\n",
+       "              tensor([[0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000,\n",
+       "                       0.5000],\n",
+       "                      [0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000,\n",
+       "                       0.5000],\n",
+       "                      [0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000,\n",
+       "                       0.5000],\n",
+       "                      [0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000,\n",
+       "                       0.5000],\n",
+       "                      [0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000,\n",
+       "                       0.5000],\n",
+       "                      [0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000,\n",
+       "                       0.5000],\n",
+       "                      [0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000,\n",
+       "                       0.5000],\n",
+       "                      [0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000,\n",
+       "                       0.5000],\n",
+       "                      [0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000,\n",
+       "                       0.5000],\n",
+       "                      [0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000,\n",
+       "                       0.5000]])),\n",
+       "             ('layers.9.resolution',\n",
+       "              tensor([[1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000.],\n",
+       "                      [1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000.],\n",
+       "                      [1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000.],\n",
+       "                      [1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000.],\n",
+       "                      [1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000.],\n",
+       "                      [1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000.],\n",
+       "                      [1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000.],\n",
+       "                      [1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000.],\n",
+       "                      [1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000.],\n",
+       "                      [1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000., 1000.]])),\n",
+       "             ('layers.9.efficiency',\n",
+       "              tensor([[0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000,\n",
+       "                       0.5000],\n",
+       "                      [0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000,\n",
+       "                       0.5000],\n",
+       "                      [0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000,\n",
+       "                       0.5000],\n",
+       "                      [0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000,\n",
+       "                       0.5000],\n",
+       "                      [0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000,\n",
+       "                       0.5000],\n",
+       "                      [0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000,\n",
+       "                       0.5000],\n",
+       "                      [0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000,\n",
+       "                       0.5000],\n",
+       "                      [0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000,\n",
+       "                       0.5000],\n",
+       "                      [0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000,\n",
+       "                       0.5000],\n",
+       "                      [0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000, 0.5000,\n",
+       "                       0.5000]]))])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "volume.state_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
