Clamp efficiency to [0,1]

--- a/examples/Indepth_tutorial.ipynb
+++ b/examples/Indepth_tutorial.ipynb
@@ -174,7 +174,11 @@
     "### Passive volume definition\n",
     "First let's set up the passive volume; a block occupying (x,y,z) space from (0,0,0)->(L,W,H), and subdivided into cubic voxels of width *size*. Each voxel can be specified as a different material with varying x0 (radiation length [m]). `tomopt.core.X0` includes a dictionary of the x0 in various materials.\n",
     "\n",
-    "The `tomopt.volume` contains methods and classes to enable the definition of the active and passive volumes. Construction of a passive volume is done layer-wise in the z-axis, and each layer should be a `tomopt.volume.layer.PassiveVolume`. These are initialised by stating the z-position of the **top** of the layer, the transverse length and width of layer, and the size of each voxel (simultaneously defines the depth of the layer and the number of voxels in the layer). The user should ensure that the length and width are both divisible by the size. The materials of the voxels in the layer are defined using a function which takes the coordinates of the layer and returns an (N,M) tensor with the X0 of material for the (NxM voxels in x,y).\n",
+    "The `tomopt.volume` contains methods and classes to enable the definition of the active and passive volumes. Construction of a passive volume is done layer-wise in the z-axis, and each layer should be a `tomopt.volume.layer.PassiveLayer`. These are initialised by stating the z-position of the **top** of the layer, the transverse length and width of layer, and the size of each voxel (simultaneously defines the depth of the layer and the number of voxels in the layer). The user should ensure that the length and width are both divisible by the size. The materials of the voxels in the layer are defined using a function which takes the coordinates of the layer and returns an (N,M) tensor with the X0 of material for the (NxM voxels in x,y).\n",
+    "\n",
+    "Limitations:\n",
+    "- The scattering model used highly simplified.\n",
+    "- The computation of the number of radition lengths in a $\\delta z$ step is based solely on the material of the voxel at the start of the step.\n",
     "\n",
     "Below, we'll look at how to construct a passive layer"
    ]
@@ -305,7 +309,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Detector layer definition"
+    "### Detector layer definition\n",
+    "Similar to the passive volume, detectors are build in layers of cubic voxels of width *size*. Every detector voxel *exists*, in order to prevent non-differenitial creation/destruction of detectors, but their resolution and efficiency are parameters to be optimised. The *cost* of each voxel depends on its resolution and efficiency and by including the cost in the loss function, the optimisation is prevented from simply maxing out the detector parameters.\n",
+    "\n",
+    "Limitations:\n",
+    "- Currently, TomOpt only supports the use of two pairs of detector layers, one pair above, and the other below the passive volume.\n",
+    "- Additionally, detector layers do **not** scatter muons.\n",
+    "\n",
+    "Again `tomopt.volume.layer.DetectorLayer` is initialised using the z-position of the **top** of the layer, the transverse length and width of layer, and the size of each voxel (simultaneously defines the depth of the layer and the number of voxels in the layer). The user should ensure that the length and width are both divisible by the size. Additionally, the user must provide the initial resolution and efficiency, which will be used by all elements of the layer, and the functions for relating the resolution and efficiency values to the cost of the detector voxel.\n",
+    "\n",
+    "Below are two arbitrary cost functions, remembering that the efficiecy should be typically be between [0,1]:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def eff_cost(x:Tensor) -> Tensor:\n",
+    "    return torch.expm1(3*F.relu(x))  # free for negative efficiency, sharp rise as efficiency increases"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def res_cost(x:Tensor) -> Tensor:\n",
+    "    return F.relu(x/100)**2  # free for negative resoltuion, gradual rise as resoltuion increases"
    ]
   },
   {
