Second tutorial complete

--- a/examples/Hello_World.ipynb
+++ b/examples/Hello_World.ipynb
@@ -186,7 +186,7 @@
    "outputs": [],
    "source": [
     "wrapper = VolumeWrapper(volume,\n",
-    "                        res_opt=partial(torch.optim.SGD, lr=2e1),  # Scale of resoltuion is large, so use high LR\n",
+    "                        res_opt=partial(torch.optim.SGD, lr=2e1),  # Scale of resolution is large, so use high LR\n",
     "                        eff_opt=partial(torch.optim.SGD, lr=2e-5),  # Scale of efficiency is [0,1] so use small LR\n",
     "                        loss_func=DetectorLoss(cost_coef=0.025))  # Loss is precision + cost_coef*detector cost, balance as required"
    ]
