--- a/examples/01_Indepth_tutorial_single_cycle.ipynb
+++ b/examples/01_Indepth_tutorial_single_cycle.ipynb
@@ -26,7 +26,7 @@
     "## Muon generation\n",
     "The `tomopt.muon` contains functions and classes to deal with the generation and handling of muons.\n",
     "\n",
-    "`tomopt.muon.generation.generate_batch` will generate N muons on demand via random sampling. These are stored as an (N,5) tensor, with columns corresponding to (x,y,momentum,$\\theta_x$,$\\theta_y$), where $\\theta$ is the angle between the z-axis and the trajectory of the muon in x & y. Currently x & y are uniform in $[0,1)$, momentum is fixed, and the $\\theta$ is not properly sampled."
+    "`tomopt.muon.generation.generate_batch` will generate N muons on demand via random sampling. These are stored as an (N,5) tensor, with columns corresponding to (x,y,momentum,$\\theta_x$,$\\theta_y$), where $\\theta$ is the angle between the z-axis and the trajectory of the muon in x & y. Currently x & y are uniform in $[0,1)$, momentum is fixed, and the $\\theta$ is not properly sampled (a scaled & clamped Gaussian is used)."
    ]
   },
   {
@@ -176,7 +176,7 @@
     "\n",
     "The `tomopt.volume` contains methods and classes to enable the definition of the active and passive volumes. Construction of a passive volume is done layer-wise in the z-axis, and each layer should be a `tomopt.volume.layer.PassiveLayer`. These are initialised by stating the z-position of the **top** of the layer, the transverse length and width of layer, and the size of each voxel (simultaneously defines the depth of the layer and the number of voxels in the layer). The user should ensure that the length and width are both divisible by the size. The materials of the voxels in the layer are defined using a function which takes the coordinates of the layer and returns an (N,M) tensor with the X0 of material for the (NxM voxels in x,y).\n",
     "\n",
-    "Limitations:\n",
+    "Current limitations:\n",
     "- The scattering model used highly simplified.\n",
     "- The computation of the number of radition lengths in a $\\delta z$ step is based solely on the material of the voxel at the start of the step.\n",
     "\n",
@@ -312,7 +312,7 @@
     "### Detector layer definition\n",
     "Similar to the passive volume, detectors are build in layers of cubic voxels of width *size*. Every detector voxel *exists*, in order to prevent non-differenitial creation/destruction of detectors, but their resolution and efficiency are parameters to be optimised. The *cost* of each voxel depends on its resolution and efficiency and by including the cost in the loss function, the optimisation is prevented from simply maxing out the detector parameters.\n",
     "\n",
-    "Limitations:\n",
+    "Current limitations:\n",
     "- Currently, TomOpt only supports the use of two pairs of detector layers, one pair above, and the other below the passive volume.\n",
     "- Additionally, detector layers do **not** scatter muons.\n",
     "\n",
@@ -1527,7 +1527,7 @@
    "source": [
     "The xy coordinates are the positions of the muons as recorded by the detector voxel the muon passed through, and is computed according to: $x_{\\mathrm{reco}}=\\mathcal{N}\\left(x_{\\mathrm{true}},\\mathrm{res}^{-1}\\right)$, however the recorded positions are clamped to stay within the voxel that the muon passed through. There are several things to be aware of:\n",
     "- Muons outside the detector still have hits recorded for them. This is for simplicity when propagating the muon batch through the volume, and muons that exit the volume are later filtered out\n",
-    "- All muons inside the detector cause hits regardless of whether the detector efficiency. Throwing a random number against the efficiency does not allow the loss to be differentiated w.r.t the efficiency, instead the product of all the efficiencies encountered by a given muon is used to weight its contributions to the prediction of the x0.\n",
+    "- All muons inside the detector cause hits regardless of the detector efficiency. Throwing a random number against the efficiency does not allow the loss to be differentiated w.r.t the efficiency, instead the product of all the efficiencies encountered by a given muon is used to weight its contributions to the prediction of the x0.\n",
     "\n",
     "Eventually, each muon will accumulate 4 hits. `MuonBatch.get_hits` concatenates the hits together for muons which are still inside the detector at the end of the propagation:"
    ]
@@ -3912,7 +3912,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And we can replace the entire x0 composition of the passive colume with a new function:"
+    "And we can replace the entire x0 composition of the passive volume with a new function:"
    ]
   },
   {
