--- a/examples/02_Indepth_tutorial_optimisation_and_callbacks.ipynb
+++ b/examples/02_Indepth_tutorial_optimisation_and_callbacks.ipynb
@@ -255,7 +255,8 @@
     }
    ],
    "source": [
-    "VolumeWrapper.from_save('save.pt', volume=volume, res_opt=partial(torch.optim.SGD, lr=2e1), eff_opt=partial(torch.optim.SGD, lr=2e-5), loss_func=DetectorLoss(cost_coef=0.025))"
+    "VolumeWrapper.from_save('save.pt', volume=volume, res_opt=partial(torch.optim.SGD, lr=2e1), eff_opt=partial(torch.optim.SGD, lr=2e-5),\n",
+    "                        loss_func=DetectorLoss(cost_coef=0.025))"
    ]
   },
   {
@@ -339,7 +340,7 @@
    "source": [
     "def arb_rad_length2(*,z:float, lw:Tensor, size:float) -> float:\n",
     "    rad_length = torch.ones(list((lw/size).long()))*X0['beryllium']\n",
-    "    if z >= 0.4 and z <= 0.5: rad_length[:5,:5] = X0['lead']\n",
+    "    if z >= 0.4 and z <= 0.5: rad_length[5:,5:] = X0['copper']\n",
     "    return rad_length"
    ]
   },
@@ -391,7 +392,7 @@
     "    1. for `p`, `passive` in enumerate(`trn_passives`):\n",
     "        1. load `passive` into passive volume\n",
     "        1. for muon_batch in range(`n_mu_per_volume`//`mu_bs`):\n",
-    "            1. Irridiate volume with `mu_bs` muons\n",
+    "            1. Irradiate volume with `mu_bs` muons\n",
     "            1. Infer passive volume\n",
     "        1. Compute loss based on precision and cost, and add to `loss`\n",
     "        1. if `p`+1 % `passive_bs` == 0:\n",
@@ -446,7 +447,7 @@
     "        1. `on_volume_begin`\n",
     "        1. for muon_batch in range(`n_mu_per_volume`//`mu_bs`):\n",
     "            1. `on_mu_batch_begin`\n",
-    "            1. Irridiate volume with `mu_bs` muons\n",
+    "            1. Irradiate volume with `mu_bs` muons\n",
     "            1. Infer scatter locations\n",
     "            1. `on_scatter_end`\n",
     "            1. Infer x0 and append to list of x0 predictions\n",
@@ -476,7 +477,7 @@
     "        1. `on_volume_begin`\n",
     "        1. for muon_batch in range(`n_mu_per_volume`//`mu_bs`):\n",
     "            1. `on_mu_batch_begin`\n",
-    "            1. Irridiate volume with `mu_bs` muons\n",
+    "            1. Irradiate volume with `mu_bs` muons\n",
     "            1. Infer scatter locations\n",
     "            1. `on_scatter_end`\n",
     "            1. Infer x0 and append to list of x0 predictions\n",
@@ -705,7 +706,7 @@
     "            self.preds.append((self.wrapper.fit_params.pred.detach().cpu().numpy(), self.wrapper.volume.get_rad_cube().detach().cpu().numpy()))\n",
     "```\n",
     "\n",
-    "Whilst this is the default prediction callback, we are free to pass our own prediction callbacks to the prediction function as a seperate argument to any other callback we wish to use. When running predictions, `on_train_*` methods are not called, instead `on_pred_begin` and `on_pred_end` are called at similar points.\n",
+    "Whilst this is the default prediction callback, we are free to pass our own prediction callbacks to the prediction function as a separate argument to any other callback we wish to use. When running predictions, `on_train_*` methods are not called, instead `on_pred_begin` and `on_pred_end` are called at similar points.\n",
     "\n",
     "As well as just running inference of the passive volume, we may wish to gather diagnostic information about the hits and scatter locations. `tomopt.optimisation.callbacks.diagnostic_callbacks` contains:\n",
     "- `ScatterRecord` to record the reconstructed scatter locations in the passive volume\n",
@@ -1149,7 +1150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From both of these plots we can see then density along the edges is lower, this is due to the fact that hits and scatters are recorded only for muons which stay within the passive volume, so muons which do pass through the edege in one layer are likely to leave the volume and be excluded from the plots."
+    "From both of these plots we can see then density along the edges is lower, this is due to the fact that hits and scatters are recorded only for muons which stay within the passive volume, so muons which do pass through the edges in one layer are likely to leave the volume and be excluded from the plots."
    ]
   },
   {
