--- a/examples/00_Hello_World.ipynb
+++ b/examples/00_Hello_World.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,16 +54,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f9c3b243a60>]"
+       "[<matplotlib.lines.Line2D at 0x7ff5debc98e0>]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -90,16 +90,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f9c3b30ad00>]"
+       "[<matplotlib.lines.Line2D at 0x7ff5dee05cd0>]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -247,7 +247,7 @@
     "wrapper = VolumeWrapper(volume,\n",
     "                        res_opt=partial(torch.optim.SGD, lr=2e1),  # Scale of resolution is large, so use high LR\n",
     "                        eff_opt=partial(torch.optim.SGD, lr=2e-5),  # Scale of efficiency is [0,1] so use small LR\n",
-    "                        loss_func=DetectorLoss(cost_coef=0.025))  # Loss is precision + cost_coef*detector cost, balance as required"
+    "                        loss_func=DetectorLoss(0.025))  # Loss is precision + cost_coef*detector cost, balance as required"
    ]
   },
   {
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
